feat: configures number of lines to check via env var
Allows configuring the number of lines to check in the
cloudflared output via the PYCLOUDFLARED_LINES_TO_CHECK
environment variable.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ select = [
   "UP",
   "W",
 ]
-ignore = ["B905", "E501"]
+ignore = ["B905", "E501", "PLW1508"]
 unfixable = ["F401"]
 
 [tool.uv.build-backend]
